--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -33,7 +33,7 @@ jobs:
       run: go test ./...
   
   code-quality:
-    runs-on: ubuntu-latest
+    runs-on: mac-runner
 
     steps:
     - name: Checkout repository
@@ -45,7 +45,7 @@ jobs:
         version: v1.56.2
   
   push:
-    runs-on: ubuntu-latest
+    runs-on: mac-runner
 
     needs: build
 
@@ -71,7 +71,7 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/go-web-app:${{github.run_id}}
 
   update-newtag-in-helm-chart:
-    runs-on: ubuntu-latest
+    runs-on: mac-runner
 
     needs: push
 
