--- a/helm/go-web-app-chart/templates/ingress.yaml
+++ b/helm/go-web-app-chart/templates/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: nginx
+  ingressClassName: ingress-nginx
   rules:
   - host: go-web-app.local
     http:
